# hackathon_slm

./: LICENSE  README.md  inference.py  main.py  prompts.py  pyproject.toml  schemas.py  utils.py
