[project]
name = "submission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "polars>=1.40.0",
    "torch>=2.8.0",
    "transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
